cmake_minimum_required(VERSION 3.15.0)
project(RPI_GPIO_HANDLER)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
add_subdirectory(src)
set(SOURCES src/main.c src/utils.c src/gpio.c ${HEADERS})
set(HEADERS include/utils.h include/gpio.h)
add_executable(${PROJECT_NAME} ${SOURCES})
target_include_directories(${PROJECT_NAME} PRIVATE ../include)
